@@ -13,6 +13,7 @@ version 2.1-alpha XX-Ago-2012
 			labelWithString:dimension:hAlign:vAlign:font:size -> labelWithString:font:size:dimension:hAlign:vAlign:
 . [NEW] Node: Added RotationalSkew featur (compatible with Flash)
 . [NEW] Tests: Tests for RotationalSkew feature
+. [FIX] MenuItemToggle: Don't remove tag of added item.
 . [FIX] Node & BatchNode: RENDER_IN_SUBPIXEL works as expected.
 . [FIX] LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
 			Don't assert if character is not found. Just continue with logging the warning.
